--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="dm54">54dp</dimen>
     <dimen name="dm56">56dp</dimen>
     <dimen name="dm60">60dp</dimen>
+    <dimen name="dm76">76dp</dimen>
     <dimen name="dm102">102dp</dimen>
     <dimen name="dm106">106dp</dimen>
     <dimen name="dm160">160dp</dimen>
