--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -326,7 +326,7 @@
     </style>
 
     -- style for MediatechActivity
-    <style name="mediatech_tablayout" >
+    <style name="mediatech_tablayout" parent="TextAppearance.Design.Tab">
         <item name="android:fontFamily">@font/ys_medium</item>
         <item name="android:textColor">@color/dark_item</item>
         <item name="background">@color/white</item>
@@ -337,7 +337,6 @@
         <item name="android:textSize">@dimen/dm14</item>
         <item name="android:textAlignment">center</item>
         <item name="tabIndicator">@drawable/tablayout_indicator</item>
-        <item name="textAllCaps">false</item>
     </style>
 
     <style name="mediatech_fragment" >
