--- a/app/src/main/res/layout/fragment_addplaylist.xml
+++ b/app/src/main/res/layout/fragment_addplaylist.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/leftBorder"
@@ -25,7 +24,7 @@
         android:layout_height="@dimen/zero"
         android:scaleType="centerCrop"
         android:layout_marginHorizontal="@dimen/dm24"
-        android:layout_marginTop="82dp"
+        android:layout_marginTop="@dimen/dm82"
         android:src="@drawable/add_image_for_playlist"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintEnd_toEndOf="parent"
