--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -19,13 +18,13 @@
 
     <TextView
         android:id="@+id/title"
+        style="@style/parentAllForTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:fontFamily="@font/ys_medium"
         android:layout_marginBottom="@dimen/dm4"
         android:text="@string/add_to_playlist"
-        android:textColor="@color/dark_item"
         android:textSize="@dimen/ln19" />
 
     <com.google.android.material.button.MaterialButton
