--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginVertical="@dimen/dm8"
     android:orientation="vertical"
@@ -44,4 +44,5 @@
         android:maxLines="1"
         android:text="@string/playlist_count"
         android:textSize="@dimen/ln12" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
