--- a/app/src/main/res/layout/item_playlist_bottom_sheet.xml
+++ b/app/src/main/res/layout/item_playlist_bottom_sheet.xml
@@ -5,7 +5,6 @@
     android:id="@+id/trackView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
     android:orientation="horizontal"
     android:theme="@style/Theme.PlaylistMaker">
 
@@ -22,7 +21,7 @@
             android:layout_height="@dimen/dm45"
             android:layout_gravity="center"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_placeholder" />
+            android:background="@drawable/ic_placeholder" />
 
     </androidx.cardview.widget.CardView>
 
@@ -30,18 +29,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="@dimen/dm44"
         android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_playlist_name"
+            style="@style/parentAllForTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:fontFamily="@font/ys_display_regular"
             android:maxLines="1"
-            android:textColor="@color/dark_item"
             android:textSize="@dimen/ln16"
             tools:text="@string/playlist_name" />
 
