--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     -- style for button on the Main Screen activity_main.xml
 
     <style name="ButtonMainScreenStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -361,6 +361,17 @@
         <item name="theme">@style/ThemeOverlay.AppCompat.Dark</item>
         <item name="android:background">@color/white</item>
         <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textFontWeight">500</item>
+    </style>
+
+    <style name="AddToolBar">
+        <item name="android:background">@color/white</item>
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textSize">@dimen/ln22</item>
+        <item name="title">@string/media_add_new_playlist</item>
+        <item name="android:titleTextColor">@color/dark_item</item>
+        <item name="navigationIcon">@drawable/arrow_back</item>
+        <item name="navigationIconTint">@color/dark_item</item>
         <item name="android:textFontWeight">500</item>
     </style>
 
