--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -41,7 +41,12 @@
         tools:layout="@layout/fragment_search">
         <action
             android:id="@+id/action_searchFragment_to_activityPlayer"
-            app:destination="@id/playerFragment" />
+            app:destination="@id/playerFragment" >
+            <argument
+                android:name="track"
+                app:argType="com.practicum.playlistmaker.domain.search.models.Track"
+                />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/playerFragment"
@@ -54,6 +59,11 @@
         <action
             android:id="@+id/action_playerFragment_to_playerBottomSheetFragment"
             app:destination="@id/playerBottomSheetFragment" />
+
+        <argument
+            android:name="track"
+            app:argType="com.practicum.playlistmaker.domain.search.models.Track"
+            />
     </fragment>
     <fragment
         android:id="@+id/addPlayListFragment"
