--- a/app/src/main/res/layout/fragment_addplaylist.xml
+++ b/app/src/main/res/layout/fragment_addplaylist.xml
@@ -1,121 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
-        style="@style/AddToolBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/leftBorder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="16dp" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/rightBorder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/dm16" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            style="@style/mediatechLinearLayout"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            style="@style/AddToolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/leftBorder"
-                android:layout_width="wrap_content"
+    <ImageView
+            android:id="@+id/addImage"
+            style="@style/coverImage"
+            android:layout_marginTop="82dp"
+            android:contentDescription="@string/add_image"
+            app:layout_constraintBottom_toTopOf="@id/playListNameTextInputLayout"
+            android:src="@drawable/add_image_for_playlist"
+            android:layout_weight="0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/playListNameTextInputLayout"
+            style="@style/PlayListCreateTextInputLayout"
+            android:layout_marginTop="32dp"
+            android:layout_weight="1"
+            android:hint="@string/playlist_name_hint"
+            app:boxStrokeColor="@color/text_not_stroke"
+            app:hintTextColor="@color/text_not"
+            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
+            app:layout_constraintStart_toStartOf="@+id/leftBorder"
+            app:layout_constraintTop_toBottomOf="@+id/addImage">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/playListNameEditText"
+                style="@style/PlayListCreateEditText"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="16dp" />
+                android:inputType="textCapSentences" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/rightBorder"
-                android:layout_width="wrap_content"
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/playListDescriptionTextInputLayout"
+            style="@style/PlayListCreateTextInputLayout"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:hint="@string/description"
+            app:boxStrokeColor="@color/text_not_stroke"
+            app:hintTextColor="@color/text_not"
+            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
+            app:layout_constraintStart_toStartOf="@+id/leftBorder"
+            app:layout_constraintTop_toBottomOf="@+id/playListNameTextInputLayout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/playListDescriptionEditText"
+                style="@style/PlayListCreateEditText"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="@dimen/dm16" />
+                android:inputType="textCapSentences" />
 
-            <ImageView
-                android:id="@+id/addImage"
-                android:layout_width="@dimen/zero"
-                android:layout_height="@dimen/zero"
-                android:layout_marginHorizontal="@dimen/dm24"
-                android:layout_marginTop="82dp"
-                android:layout_weight="0"
-                android:contentDescription="@string/add_image"
-                android:scaleType="centerCrop"
-                android:src="@drawable/add_image_for_playlist"
-                app:layout_constraintDimensionRatio="w, 1:1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/playListNameTextInputLayout"
-                style="@style/PlayListCreateTextInputLayout"
-                android:layout_marginTop="32dp"
-                android:layout_weight="1"
-                android:hint="@string/playlist_name_hint"
-                app:boxStrokeColor="@color/text_not_stroke"
-                app:hintTextColor="@color/text_not"
-                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
-                app:layout_constraintStart_toStartOf="@+id/leftBorder"
-                app:layout_constraintTop_toBottomOf="@+id/addImage">
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/playlistCreateButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dm8"
+        android:layout_marginBottom="@dimen/dm32"
+        android:layout_weight="1"
+        android:background="@drawable/button"
+        android:enabled="false"
+        android:fontFamily="@font/ys_medium"
+        android:inputType="textCapSentences"
+        android:padding="@dimen/dm12"
+        android:text="@string/create"
+        android:textColor="@color/white"
+        android:textSize="@dimen/ln16"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/rightBorder"
+        app:layout_constraintStart_toStartOf="@id/leftBorder"
+        app:layout_constraintTop_toBottomOf="@+id/playListDescriptionTextInputLayout"
+        app:layout_constraintVertical_bias="1.0" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/playListNameEditText"
-                    style="@style/PlayListCreateEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textCapSentences" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/playListDescriptionTextInputLayout"
-                style="@style/PlayListCreateTextInputLayout"
-                android:layout_marginTop="16dp"
-                android:layout_weight="1"
-                android:hint="@string/description"
-                app:boxStrokeColor="@color/text_not_stroke"
-                app:hintTextColor="@color/text_not"
-                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
-                app:layout_constraintStart_toStartOf="@+id/leftBorder"
-                app:layout_constraintTop_toBottomOf="@+id/playListNameTextInputLayout">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/playListDescriptionEditText"
-                    style="@style/PlayListCreateEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textCapSentences" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/playlistCreateButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dm4"
-                android:layout_marginBottom="@dimen/dm32"
-                android:layout_weight="1"
-                android:background="@drawable/button"
-                android:enabled="false"
-                android:fontFamily="@font/ys_medium"
-                android:inputType="textCapSentences"
-                android:padding="@dimen/dm12"
-                android:text="@string/create"
-                android:textColor="@color/white"
-                android:textSize="@dimen/ln16"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/rightBorder"
-                app:layout_constraintStart_toStartOf="@id/leftBorder"
-                app:layout_constraintTop_toBottomOf="@+id/playListDescriptionTextInputLayout"
-                app:layout_constraintVertical_bias="1.0" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
